--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ ext {
 	snippetsDir = file('build/generated-snippets')
 }
 
+test {
+	outputs.dir snippetsDir
+	useJUnitPlatform()
+}
+
 dependencies {
 	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor'
 
@@ -40,20 +45,13 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	
-	/*testCompile('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'junit', module: 'junit;'
-	}*/
-  
-  	// testImplementation 'org.springframework.security:spring-security-test'	
+ 
+  	testImplementation 'org.springframework.security:spring-security-test'	
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api'
 	testImplementation 'org.junit.jupiter:junit-jupiter-engine'
 }
 
-test {
-	outputs.dir snippetsDir
-	useJUnitPlatform()
-}
 
 asciidoctor {
 	inputs.dir snippetsDir
